<resources>
    <string name="app_name">Cychedule</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_to_signup">New here? Sign up now!</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_usrName">sharedPreference_usrName</string>
    <string name="nav_header_abstract">sharedPreference_abstract</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_daysCounter">Days Counter</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main3">Main3Activity</string>

    <!-- home -->
    <string name="fragment_home_today_title">Today</string>
    <string name="fragment_home_event_this_week_title">Event This Week</string>
    <string name="fragment_home_alarm_list_title">Days Counter List</string>
    <string name="fragment_home_alarm_list_empty">Oops. Nothing here : (\nClick me to add a new days counter </string>
    <string name="fragment_home_empty">It\'s empty ...</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Exit!</string>
</resources>
