<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.cs309.cychedule.activities.ui.home.HomeFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.cs309.cychedule.activities.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_daysCounter"
        android:name="com.cs309.cychedule.activities.ui.dayscounter.DaysCounterFragment"
        android:label="@string/menu_daysCounter"
        tools:layout="@layout/fragment_dayscounter" />

    <fragment
        android:id="@+id/nav_timer"
        android:name="com.cs309.cychedule.activities.ui.alarm.AlarmFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_alarm" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.cs309.cychedule.activities.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.cs309.cychedule.activities.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>